# micrograd

./: .gitignore  Dockerfile  README.md  demo.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
micrograd/: engine.py  nn.py
test/: test_engine.py
