[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micrograd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
]
